@@ -2,30 +2,24 @@
 Hash: SHA256
 
 AUX hg-git-0.3.4-git_handler-bookmarks-hg25.patch 1136 SHA256 fd1be8efa365f9ab64ab283e0f173091923ea9a832fa966f5dce9b529f9605c9 SHA512 8710e6b16fc4005b145c60e4c89deebdf57366b475df618518975620880ff0ac60429de1af26c717518cedde419732030affd3bcf5acd0eca60a12dcfd558e81 WHIRLPOOL 2957c72de84b872c60bd182aed7bab92260ece0912b1033b7e8cb9f1db0cdf8119fa3b24c70bac563443d0083e086e44e8c44c4e6e1975d4e59b9684d9dff209
-DIST hg-git-0.5.0.tar.gz 28923 SHA256 bad27f98f4a3d58acbea6495b93d6b7ca27e5544e1c685c4432e5d0fe09fcbee SHA512 ee695b2340f571827ed3fcc4542d838d85525de0a2ba0dbb875dba9348d1c8d30c7ad515072db0bf354d5cce77cf64300cf57f71b75f8b0740dd0acf35a6e1b3 WHIRLPOOL 9a36ccfd7194dc5d5a419f6ee6bce085adc7abc215ac7b42e8f195881777998cc3280699f82f17bb436a028b07e713260f0bbb31bce1ab7ceb331a5a6f3136b6
-DIST hg-git-0.6.0.tar.gz 31073 SHA256 fe10a81d5daf401e1df6d04e63a300a405441a77f13dfd6f1833e76c2785ecd5 SHA512 1b2fd15edd13c2b2fb6f4c79d68d0ab675bf200090b4965886ea7b6564aa15ac04a8cd7d967a03732f1cf727b7492dd01fed13e798752d9c5fbaff287806d50b WHIRLPOOL cad193f78e63b2f769f3c51c81c285d1cb3400ed08b311505e9bae0e93da9fba3370985e46f8b4561a7dee6848d33e750fde2ceb71db8445b1cbc9fecc8c44e5
-DIST hg-git-0.6.1.tar.gz 41055 SHA256 3a8111b232c2ab479d653e0fda7fb71d54af50fcaa18f49a648d9e3338f9d38c SHA512 518b82a79eab368ab5a64062d225eb3ca16443aa05354e8499a612a24a6fd530b8b30c04ae97c409b58f533b24f0292fcee09f6906c541eda65e018d07aadd50 WHIRLPOOL f7b8c182f246ea390dd4cee43523221b39e0425d83cf32c12d79818a862bd4f35eed66698ea4c2c843fc0704f49fc228e37e5441395b21007f00186140cdf117
 DIST hg-git-0.7.0.tar.gz 42956 SHA256 9db9cd87b9b173c192b29336b4029122a4fe2858c369dc8c5a59228515bc61a9 SHA512 732dbd12184a5346310b6d14bb0b24c2255ff607ef54d064387b7cadd64aa84dd2d6909e6dde36f9fa8ac8131c1adc315c2bae2e068066864c086b239524d5d4 WHIRLPOOL 0c8216da9fdaebc2fcb56d7bec12e9a087570cf032d253e77833cbf8f31a2d581d85b820c51e37cd519ce720bd49fec5be27211b58b64fb9c18b1fff1c24d26e
-EBUILD hg-git-0.5.0-r1.ebuild 813 SHA256 e2e36da9c90bb849a05fe8a77ebe6ad67c26fb303f9a9771f571075c39f00ec6 SHA512 2fde975980790ce364501b426e9b459dca760c0bc1701e4ab6f2f66db6847ac2ae8ab185244293e4ece14b4096b2e0c7129eee774e7046450f43aec576844a9f WHIRLPOOL 7aa9d02569863e7c25daf0962f4ef2a5ba49efedc33e0f1cfaa05785826827d94d8e0b82515cedfb787117f357df41dd849f9075136e675aea2437d8e8f7e3d0
-EBUILD hg-git-0.6.0.ebuild 809 SHA256 44bb644f6630a3ab042b0cc886d21953b4c4025cffcdd24e43189ca44a8cd88b SHA512 1c8c046a5d701c9b1a30906b46ad5841e8e2dc585c904db353d305e645bb6ab192724d4aa72a0e8d42a90fbabe2e74bbb48384206c10ce1c7bc23795efe9f942 WHIRLPOOL a99578f130b53c7b67432fc40bdfc7e5a3bd77e7710f571e20c35c222b8f66b0fe6c226ceb38d3032d0fe74e3f0b043f7e7e0b6e872468360f61cf57f322a8ac
-EBUILD hg-git-0.6.1.ebuild 809 SHA256 4dd6e8668692271f976bbb8e1225b65a89d808268ae0c1be9a7ec23eec7c3dad SHA512 53658ff720e2e593181987e916d555c806feea544299287ac54d3d29d4ea3287d85bac01164123c755b7891d5a395746573169f2c531ad7adcacc0b70205c99b WHIRLPOOL cf847f1e85b7ebb3c0005bb3971b9e0558005e74c6427fb96f8a2666f0f27c3fad5006ad4ccaaa0bd83ec70950a7b4b7967367da20472268236a21ae2f19c1ab
 EBUILD hg-git-0.7.0.ebuild 807 SHA256 6d54d95f814fe01a9f6235c99441db9c7765f872d542aff65a9130f70148c96a SHA512 7cb8615a6e297c48b100f65a275453f4472c99361f40b30fae76c53631c6569c18f6cf166b3c79f5598662cc6899611288485f0bca34dbd186d36a8f94f67970 WHIRLPOOL 6540fe99da57527f590e19a793a2b1eaf56e6b0cbdaf4d96a8c4bb426a1fbd29a2d08ae4c0a962376e4b2cc7ad09527c75c9efe5b3f1f9c1622e3088de817654
-MISC ChangeLog 8301 SHA256 340b3f8b6f682a9e4854934211ff267d288fb9b30629b78e650bd9486bb8eaf7 SHA512 f13f8a75ddd4bbd71f61da66110d5faacc5cbc8bcb24c266938c5747f88c7a83ce121511ae9db4696157b71322a3a3c902e12ae42107160d26f783f2ca533756 WHIRLPOOL c9909d0bcd520c329548c5e395ea4369128946a632bb540c1f929feb471849e0317772817ef631db529ccb3e739d9f78b90a1c0afdbf02df366d3dca23d72010
+MISC ChangeLog 8453 SHA256 6e5ce821ededea9722171f4dad3a976ff51f9e5f61549ba0cf61ab2d599dfa83 SHA512 cae4a84c083ab22bda7d18ba53477172133ff2eab5b036446634360adb115188180cad7340c5c5121ad27e22219df239270e36e7e14e15cbb68b772d91a31546 WHIRLPOOL 6fa0a34740c25880168f39bd413d0ab395acbae8aab4664da788f646a645613b8c9a8bda7b2e19003c57b7cc679694a54d2c6d9cc078426c5bf435fcb1e94bef
 MISC metadata.xml 395 SHA256 eba614753d7e95676086f73da49856e69f9bdbe5a6f933a9568b150c6bba0e53 SHA512 32270b4529cd2fcef105724fca9d462c3f9dc002e5469cd2c9fcd2f7e73b1a5af78b18228b0b938bec612fd77fc989ac3cd17bf2847d4f3fafac68f0356b2eaf WHIRLPOOL 15b9a9757855c020e31ad777fef412ca26b8ee52054a7d4d0c4ca72839764e505152da4f31c13358c4fafc9393aeb5acaab626afa38920b2fec803bc0541ccb1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUxgyPAAoJELp701BxlEWfZdMQAMiS6tdE649bjGx03TmzzAEx
-bYVQOump5gUlzqV5j2hs9vJg4Af903ckCP+LY46a1WOmDoMdGU+trrXYNHXBzI/n
-D3qh6+eRvoNpi8CtQ4x4pz4zBraWsJ749urcL1IAMwSNZrbhp1wNTRLDal6Rk5FL
-zk0kJDdj0MpNpgviyDnx6blWqSy8+GpryKCtPCed0MLqkYRby/qNOMtdNMaMvD5U
-hL+6/A3y+R9rxdwok8Irpkww+ZTTt2Zflu615H+0fv722ab/cWqxtCDjzPO4KBSS
-HeLuopFgK7sv/r+Z5oAHPhxmwmLEBrS1FwBupqjPjkwmWpt7W22Z4EGPihWnRDdw
-mB8Jh8odT7evLLNLVVl8i37j+VR6nZInYGEWLiw6FPtDDLwmqCmcIjA4Ax1KGNKu
-dF8hJ93po0MqjMEVjzODVp6KNSZAJ714CZ8PWwPlqSHbqpf/nI6MUaCEbBqnl1ll
-VbQtugrjSsfNRry9ZSq5CHVKI5mDcdhHE8sYesaSCxOab8E9pVqUo5ua+mY/404g
-bfmfv+j9bYmaDXttE2V1LN3Htl+2ViR62z0o+D0G1JuBwxUxjRvWbYkHUMlLQdCP
-W5uOywFj0KBoJY5qzbK8A9lHK6hJxdCy7Q8d/FskiFiJHyF0IGwt6BgqxXKtPNMk
-PLBI/wFc+b0FCzEN1t1x
-=+LXM
+iQIcBAEBCAAGBQJUz0yVAAoJEJ+WuSkwOAOBrvEP/As4FHIEhFOhoo+tQOMvY/EX
+IO1J1DvAo3Xn0YMFUpdJvuHKWn3egRpmvN/HkB6HMHAnEn0QKCaLFRmK8vyf2/Jb
+iJqMZFvsXoKnXqqTT2Jhez6uLbA22x1FTsjF7doKxc2PfGCTenT0OMvBHGL2462r
++HYjpHfyMEm9YiTBmSUrnjOP3Q4RrPMbqPLLDEzeZC5N596oTziJU1/uzD4E4q5l
+KaeszZ4mSl2IhQJ4E+njJyJz5LxRZHQFzqFkrdvPZMDkTORX7NbgL5AA1nXiRJ9A
+X+dXQb3/6Dl7ilRYDchLW2kG5XIfbVmaZks0N0PxSgMErB4r5A5AiSoZnjggKF+M
+h2yDgqmMHoP/xpASR7xNzXkZ6CPVVztCQRgiOfxlZnVKVR+uenqUU9rj0uXwoPgZ
+MuD36EYnywat77PXvfXwShJJ+sYhRk2axWcvwxNDsIMCAdWL0VU7Q/fomGU5MhI5
+HlXd2R9xNT5Iro3nk2o1UOQgyadVM2vhFnvDEK+dkCFAfyLdfbjf9TFXR1MwGs1C
+HQkup5DFv8YZKnUeG0mwu3fZ9xUWRA42+3fhsR0pId9F/6kpKMMFUQ/rTV7YZfzM
+3RCMDirRB7ph9r/OEdGG+dvJoY/W/UKbyMB/Kn6PpEa6d26MMQghcbyGS90UN7ZN
+u3C836D2/KiTeaZMvWOZ
+=nPvO
 -----END PGP SIGNATURE-----
