@@ -1,25 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/hg-git/hg-git-0.6.0.ebuild,v 1.1 2014/05/28 06:59:45 djc Exp $
-
-EAPI="5"
-PYTHON_COMPAT=( python2_7 )
-
-inherit distutils-r1
-
-DESCRIPTION="push to and pull from a Git repository using Mercurial"
-HOMEPAGE="http://hg-git.github.io https://pypi.python.org/pypi/hg-git"
-SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="0"
-KEYWORDS="~amd64 ~ppc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
-IUSE=""
-
-RDEPEND="
-	>=dev-vcs/mercurial-1.9.3[${PYTHON_USEDEP}]
-	>=dev-python/dulwich-0.9.4[${PYTHON_USEDEP}]
-"
-DEPEND="${RDEPEND}
-	dev-python/setuptools[${PYTHON_USEDEP}]
-"
